--- a/config/s3.yml
+++ b/config/s3.yml
@@ -7,3 +7,8 @@ test:
   access_key_id: AKIAJVNGWQGBR2HCQ45Q
   secret_access_key: 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
   bucket: poopsquare_dev
+  
+production:
+  access_key_id: AKIAJVNGWQGBR2HCQ45Q
+  secret_access_key: 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
+  bucket: poopsquare_production
